package oodv4;

public enum CommunityEventType {
    MESSAGE_RECEIVED,
    POST_PUBLISHED,
    BROADCAST_STARTED,
    VOICE_SPOKEN,
    BROADCAST_STOPPED,
    TIME_ELAPSED
}
