package oodv4;

public abstract class CommunityObserver {
    public abstract void update(CommunityEvent event);
}
