package oodv4;

public abstract class Participant {
    public String id;
}
